// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: remove geometry component prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from first to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div
      className="sceneTree-name"
    >
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className="component-label"
          >
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="Cube"
          />
        </div>
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Position
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Rotation
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Scale
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          RenderGroup
        </div>
        <div
          className="header-close"
        >
          <img
            onClick={[Function]}
            src="./public/img/close.png"
          />
        </div>
      </div>
      <article
        className="wonder-render-group"
      >
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            MeshRender
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-mesh-renderer"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  <span
                    className=""
                  >
                    Draw mode
                  </span>
                </div>
                <div
                  className="item-content"
                >
                  <select
                    onChange={[Function]}
                    value="4"
                  >
                    <option
                      value="0"
                    >
                      points
                    </option>
                    <option
                      value="1"
                    >
                      lines
                    </option>
                    <option
                      value="2"
                    >
                      line_loop
                    </option>
                    <option
                      value="3"
                    >
                      Line_strip
                    </option>
                    <option
                      value="4"
                    >
                      Triangles
                    </option>
                    <option
                      value="5"
                    >
                      triangle_strip
                    </option>
                    <option
                      value="6"
                    >
                      Triangle_fan
                    </option>
                  </select>
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            Material
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-inspector-material"
            >
              <div
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Material
                </div>
                <div
                  className="item-content"
                >
                  <div
                    className="inspector-select"
                  >
                    <div
                      className="select-name"
                    >
                      Wonder-Default-Light-Material
                    </div>
                    <div
                      className="select-img"
                      onClick={[Function]}
                    >
                      <img
                        src="./public/img/select.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="material-value"
              >
                <article
                  className="inspector-item"
                >
                  <div
                    className="item-header"
                  >
                    <span
                      className=""
                    >
                      Shader
                    </span>
                  </div>
                  <div
                    className="item-content"
                  >
                    <select
                      onChange={[Function]}
                      value="1"
                    >
                      <option
                        value="0"
                      >
                        basic_material
                      </option>
                      <option
                        value="1"
                      >
                        light_material
                      </option>
                    </select>
                  </div>
                </article>
                <div
                  className=""
                >
                  <article
                    className="wonder-light-material"
                  >
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffcuse color
                      </div>
                      <div
                        className="item-content item-color"
                      >
                        <div
                          className="color-hex"
                          onClick={[Function]}
                          style={
                            Object {
                              "background": "#ffffff",
                            }
                          }
                        />
                        <div
                          className="color-select"
                          onClick={[Function]}
                        >
                          <img
                            src="./public/img/color.png"
                          />
                        </div>
                      </div>
                    </article>
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffuse map
                      </div>
                      <div
                        className="item-content item-texture"
                      >
                        <div
                          className="texture-img"
                          style={
                            Object {
                              "opacity": "1",
                            }
                          }
                        >
                          <div
                            className="img-dragBg"
                            onDragEnter={[Function]}
                            onDragLeave={[Function]}
                            onDragOver={[Function]}
                            onDrop={[Function]}
                          />
                        </div>
                        <button
                          className="texture-remove"
                          onClick={[Function]}
                        >
                          Remove
                        </button>
                      </div>
                    </article>
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Shininess
                      </div>
                      <div
                        className="item-content"
                      >
                        <input
                          className="input-component float-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          type="text"
                          value="32"
                        />
                      </div>
                    </article>
                  </article>
                </div>
                <div
                  className="material-shade"
                />
              </div>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <div
          className="content-btn"
        >
          <button
            className="addable-btn"
            onClick={[Function]}
          >
            Add Component
          </button>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`redo_undo: remove geometry component prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div
      className="sceneTree-name"
    >
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className="component-label"
          >
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="Cube"
          />
        </div>
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Position
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Rotation
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Scale
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          RenderGroup
        </div>
        <div
          className="header-close"
        >
          <img
            onClick={[Function]}
            src="./public/img/close.png"
          />
        </div>
      </div>
      <article
        className="wonder-render-group"
      >
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            MeshRender
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-mesh-renderer"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  <span
                    className=""
                  >
                    Draw mode
                  </span>
                </div>
                <div
                  className="item-content"
                >
                  <select
                    onChange={[Function]}
                    value="4"
                  >
                    <option
                      value="0"
                    >
                      points
                    </option>
                    <option
                      value="1"
                    >
                      lines
                    </option>
                    <option
                      value="2"
                    >
                      line_loop
                    </option>
                    <option
                      value="3"
                    >
                      Line_strip
                    </option>
                    <option
                      value="4"
                    >
                      Triangles
                    </option>
                    <option
                      value="5"
                    >
                      triangle_strip
                    </option>
                    <option
                      value="6"
                    >
                      Triangle_fan
                    </option>
                  </select>
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            Material
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-inspector-material"
            >
              <div
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Material
                </div>
                <div
                  className="item-content"
                >
                  <div
                    className="inspector-select"
                  >
                    <div
                      className="select-name"
                    >
                      Wonder-Default-Light-Material
                    </div>
                    <div
                      className="select-img"
                      onClick={[Function]}
                    >
                      <img
                        src="./public/img/select.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="material-value"
              >
                <article
                  className="inspector-item"
                >
                  <div
                    className="item-header"
                  >
                    <span
                      className=""
                    >
                      Shader
                    </span>
                  </div>
                  <div
                    className="item-content"
                  >
                    <select
                      onChange={[Function]}
                      value="1"
                    >
                      <option
                        value="0"
                      >
                        basic_material
                      </option>
                      <option
                        value="1"
                      >
                        light_material
                      </option>
                    </select>
                  </div>
                </article>
                <div
                  className=""
                >
                  <article
                    className="wonder-light-material"
                  >
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffcuse color
                      </div>
                      <div
                        className="item-content item-color"
                      >
                        <div
                          className="color-hex"
                          onClick={[Function]}
                          style={
                            Object {
                              "background": "#ffffff",
                            }
                          }
                        />
                        <div
                          className="color-select"
                          onClick={[Function]}
                        >
                          <img
                            src="./public/img/color.png"
                          />
                        </div>
                      </div>
                    </article>
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffuse map
                      </div>
                      <div
                        className="item-content item-texture"
                      >
                        <div
                          className="texture-img"
                          style={
                            Object {
                              "opacity": "1",
                            }
                          }
                        >
                          <div
                            className="img-dragBg"
                            onDragEnter={[Function]}
                            onDragLeave={[Function]}
                            onDragOver={[Function]}
                            onDrop={[Function]}
                          />
                        </div>
                        <button
                          className="texture-remove"
                          onClick={[Function]}
                        >
                          Remove
                        </button>
                      </div>
                    </article>
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Shininess
                      </div>
                      <div
                        className="item-content"
                      >
                        <input
                          className="input-component float-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          type="text"
                          value="32"
                        />
                      </div>
                    </article>
                  </article>
                </div>
                <div
                  className="material-shade"
                />
              </div>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <div
          className="content-btn"
        >
          <button
            className="addable-btn"
            onClick={[Function]}
          >
            Add Component
          </button>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`redo_undo: remove geometry component prepare first step: set currentSceneTreeNode test undo operate test undo one step undo step which from first to zero 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div
      className="sceneTree-name"
    >
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className="component-label"
          >
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="Cube"
          />
        </div>
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Position
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Rotation
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Scale
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Geometry
        </div>
        <div
          className="header-close"
        >
          <img
            onClick={[Function]}
            src="./public/img/close.png"
          />
        </div>
      </div>
      <article
        className="wonder-inspector-geometry"
      >
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Geometry
          </div>
          <div
            className="item-content"
          >
            <div
              className="inspector-select"
            >
              <div
                className="select-name"
              >
                Cube
              </div>
              <div
                className="select-img"
                onClick={[Function]}
              >
                <img
                  src="./public/img/select.png"
                />
              </div>
            </div>
          </div>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          RenderGroup
        </div>
        <div
          className="header-close"
        >
          <img
            onClick={[Function]}
            src="./public/img/close.png"
          />
        </div>
      </div>
      <article
        className="wonder-render-group"
      >
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            MeshRender
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-mesh-renderer"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  <span
                    className=""
                  >
                    Draw mode
                  </span>
                </div>
                <div
                  className="item-content"
                >
                  <select
                    onChange={[Function]}
                    value="4"
                  >
                    <option
                      value="0"
                    >
                      points
                    </option>
                    <option
                      value="1"
                    >
                      lines
                    </option>
                    <option
                      value="2"
                    >
                      line_loop
                    </option>
                    <option
                      value="3"
                    >
                      Line_strip
                    </option>
                    <option
                      value="4"
                    >
                      Triangles
                    </option>
                    <option
                      value="5"
                    >
                      triangle_strip
                    </option>
                    <option
                      value="6"
                    >
                      Triangle_fan
                    </option>
                  </select>
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            Material
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-inspector-material"
            >
              <div
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Material
                </div>
                <div
                  className="item-content"
                >
                  <div
                    className="inspector-select"
                  >
                    <div
                      className="select-name"
                    >
                      Wonder-Default-Light-Material
                    </div>
                    <div
                      className="select-img"
                      onClick={[Function]}
                    >
                      <img
                        src="./public/img/select.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="material-value"
              >
                <article
                  className="inspector-item"
                >
                  <div
                    className="item-header"
                  >
                    <span
                      className=""
                    >
                      Shader
                    </span>
                  </div>
                  <div
                    className="item-content"
                  >
                    <select
                      onChange={[Function]}
                      value="1"
                    >
                      <option
                        value="0"
                      >
                        basic_material
                      </option>
                      <option
                        value="1"
                      >
                        light_material
                      </option>
                    </select>
                  </div>
                </article>
                <div
                  className=""
                >
                  <article
                    className="wonder-light-material"
                  >
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffcuse color
                      </div>
                      <div
                        className="item-content item-color"
                      >
                        <div
                          className="color-hex"
                          onClick={[Function]}
                          style={
                            Object {
                              "background": "#ffffff",
                            }
                          }
                        />
                        <div
                          className="color-select"
                          onClick={[Function]}
                        >
                          <img
                            src="./public/img/color.png"
                          />
                        </div>
                      </div>
                    </article>
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffuse map
                      </div>
                      <div
                        className="item-content item-texture"
                      >
                        <div
                          className="texture-img"
                          style={
                            Object {
                              "opacity": "1",
                            }
                          }
                        >
                          <div
                            className="img-dragBg"
                            onDragEnter={[Function]}
                            onDragLeave={[Function]}
                            onDragOver={[Function]}
                            onDrop={[Function]}
                          />
                        </div>
                        <button
                          className="texture-remove"
                          onClick={[Function]}
                        >
                          Remove
                        </button>
                      </div>
                    </article>
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Shininess
                      </div>
                      <div
                        className="item-content"
                      >
                        <input
                          className="input-component float-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          type="text"
                          value="32"
                        />
                      </div>
                    </article>
                  </article>
                </div>
                <div
                  className="material-shade"
                />
              </div>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <div
          className="content-btn"
        >
          <button
            className="addable-btn"
            onClick={[Function]}
          >
            Add Component
          </button>
        </div>
      </div>
    </article>
  </article>
</article>
`;
